[metadata]
name = mkcommit
author = Krzysztof J. Czarnecki
author_email = kjczarne@gmail.com
version = attr: mkcommit.__version__
url = https://github.com/kjczarne/mkcommit
description = 
    Dead-simple tool for enforcing clean commit messages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = git, commit, style, templates
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    InquirerPy
    pyperclip

[options.entry_points]
console_scripts =
    mkcommit = mkcommit.main:main
    mkcommitconfig = mkcommit.main:configurator

[options.extras_require]
dev = 
    pdoc3
    flake8
    twine
    setuptools
    autopep8
    nox

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 12
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241